[package]
name = "ag"
version = "0.17.0"
authors = ["Russell Cohen <russell.r.cohen@gmail.com>"]
description = "CLI App to slice and dice logfiles"
license = "MIT"
repository = "https://github.com/rcoh/angle-grinder"
readme = "README.md"
edition = "2018"
include = ["src/**/*", "benches/**", "LICENSE", "README.md"]
[package.metadata.deb]
extended-description = """Angle-grinder allows you to parse, aggregate, sum, average, percentile, and sort your data. \
                        You can see it, live-updating, in your terminal. Angle grinder is designed for when, for \
                        whatever reason, you don't have your data in graphite/honeycomb/kibana/sumologic/splunk/etc. \
                        but still want to be able to do sophisticated analytics. \
                        Angle grinder can process about a million rows per second, so it's usable for fairly meaty \
                        aggregation. The results will live update in your terminal as data is processed. \
                        Angle grinder is a bare bones functional programming language coupled with a pretty terminal UI."""

[features]
default = []
self-update = ["self_update"]

[dependencies]
jemallocator = "0.3.2"
serde_json = "1.0.33"
itertools = "0.8.0"
nom = "6"
nom_locate = "3"
nom-supreme = "0.4.4"
strsim = "0.8.0"
quicli = "0.4.0"
regex = "1.1.0"
terminal_size = "0.1.12"
quantiles = "0.7.1"
crossbeam-channel = "0.3.4"
ordered-float = "2.0"
failure = "0.1.3"
structopt = "0.2"
human-panic = "1.0.1"
self_update = { version = "0.19.0", features = ["rustls"], default_features = false, optional = true }
annotate-snippets = { version = "0.9.0", features = ["color"] }
atty = "0.2.0"
lazy_static = "1.2.0"
im = "13.0.0"
logfmt = "0.0.2"
strfmt = "0.1.6"
include_dir = "0.6.1"
toml = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dtparse = "1.1"

[dev-dependencies]
assert_cmd = "1.0.1"
cool_asserts = "1.1.0"
expect-test = "1.1.0"
predicates = "1.0.5"
pulldown-cmark = "0.2.0"
criterion = "0.3"
maplit = "1.0.1"
test-generator = "0.3.0"
[dev-dependencies.cargo-husky]
version = "1"
default-features = true
features = ["run-cargo-fmt", "precommit-hook"]

[[bench]]
name = "e2e"
harness = false

[[bench]]
name = "parse"
harness = false

[profile.release]
debug = true
