[package]
name = "ag"
version = "0.19.5"
authors = ["Russell Cohen <russell.r.cohen@gmail.com>"]
description = "CLI App to slice and dice logfiles"
license = "MIT"
repository = "https://github.com/rcoh/angle-grinder"
readme = "README.md"
edition = "2018"
include = ["src/**/*", "benches/**", "LICENSE", "README.md", "aliases/*"]
[package.metadata.deb]
extended-description = """Angle-grinder allows you to parse, aggregate, sum, average, percentile, and sort your data. \
                        You can see it, live-updating, in your terminal. Angle grinder is designed for when, for \
                        whatever reason, you don't have your data in graphite/honeycomb/kibana/sumologic/splunk/etc. \
                        but still want to be able to do sophisticated analytics. \
                        Angle grinder can process about a million rows per second, so it's usable for fairly meaty \
                        aggregation. The results will live update in your terminal as data is processed. \
                        Angle grinder is a bare bones functional programming language coupled with a pretty terminal UI."""

[features]
default = []
self-update = ["self_update"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.0"

[dependencies]
serde_json = "1.0.33"
itertools = "0.10.5"
nom = "7.1.1"
nom_locate = "4.0.0"
nom-supreme = "0.8.0"
strsim = "0.10.0"
regex = "1.5.5"
terminal_size = "0.2.1"
quantiles = "0.7.1"
crossbeam-channel = "0.5.1"
ordered-float = "3.3.0"
thiserror = "1.0.37"
anyhow = "1"
human-panic = "2"
self_update = { version = "0.32.0", features = ["rustls"], default-features = false, optional = true }
annotate-snippets = { version = "0.9.0", features = ["color"] }
lazy_static = "1.2.0"
im = "15.1.0"
logfmt = "0.0.2"
strfmt = "0.2.2"
include_dir = "0.7.3"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dtparse = "1.1"
clap = { version = "4.0.18", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.5"
cool_asserts = "2.0.3"
expect-test = "1.1.0"
predicates = "2.1.1"
pulldown-cmark = "0.9.2"
criterion = "0.4.0"
maplit = "1.0.1"
test-generator = "0.3.0"
[dev-dependencies.cargo-husky]
version = "1"
default-features = true
features = ["run-cargo-fmt", "precommit-hook"]

[[bench]]
name = "e2e"
harness = false

[[bench]]
name = "parse"
harness = false

[profile.release]
debug = true
